add ProjectMapper for mapping from DTO to entity and vice versa